<resources>
    <string name="app_name">Contact Logger</string>
    <string name="lb_contacttype">Setting / Situation</string>
    <string name="lb_duration">Approx. Duration</string>
    <string name="lb_relationship">Relationship</string>
    <string name="lb_genage">Gender / Age</string>
    <string name="lb_experience">Experience</string>
    <string name="lb_pstatus">Relative Status</string>
    <string name="lb_typical">Group Typicality</string>
    <string name="lb_age">approx. Age</string>
    <string name="lb_gender">Gender</string>
    <string name="lb_item1">Reliable</string>
    <string name="lb_item2">Skilled</string>
    <string name="lb_item3">Friendly</string>
    <string name="btn_type_1">Shopping</string>
    <string name="btn_type_2">Home (yours)</string>
    <string name="btn_type_3">Food &amp; Drink Outlet</string>
    <string name="btn_type_4">Leisure activity</string>
    <string name="btn_type_5">Workplace / Uni</string>
    <string name="btn_type_6">Commute / Travel</string>
    <string name="btn_type_7">Place of worship</string>
    <string name="btn_type_8">Online / Phone</string>
    <string name="btn_type_9">Other</string>
    <string name="btn_relate_1">Friend</string>
    <string name="btn_relate_2">Acquaintance</string>
    <string name="btn_relate_3">Colleague</string>
    <string name="btn_relate_4">Customer / Client</string>
    <string name="btn_relate_5">Stranger</string>
    <string name="btn_relate_6">Service clerk</string>
    <string name="btn_relate_7">Neighbour</string>
    <string name="btn_relate_8">Partner / Spouse</string>
    <string name="btn_relate_9">Relative</string>
    <string name="btn_relate_10">Other</string>
    <string name="btn_exp_1">Very negative</string>
    <string name="btn_exp_2">Negative</string>
    <string name="btn_exp_3">Neutral</string>
    <string name="btn_exp_4">Positive</string>
    <string name="btn_exp_5">Very positive</string>
    <string name="btn_typical_1">Not at all typical</string>
    <string name="btn_typical_2">Slightly typical</string>
    <string name="btn_typical_3">Somewhat typical</string>
    <string name="btn_typical_4">Moderately typical</string>
    <string name="btn_typical_5">Very typical</string>
    <string name="btn_male">Male</string>
    <string name="btn_female">Female</string>
    <string name="btn_genother">Other gender</string>
    <string name="info_stat1">&#160;Me</string>
    <string name="info_stat2">&#160;Them</string>
    <string name="btn_status_1">Much lower</string>
    <string name="btn_status_2">Lower</string>
    <string name="btn_status_3">Equal</string>
    <string name="btn_status_4">Higher</string>
    <string name="btn_status_5">Much higher</string>
    <string name="btn_likert_1">Not at all</string>
    <string name="btn_likert_2">Slightly</string>
    <string name="btn_likert_3">Somewhat</string>
    <string name="btn_likert_4">Moderately</string>
    <string name="btn_likert_5">Very much</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="double_zero">00</string>
    <string name="btn_log_contact">Log Contact</string>
    <string name="btn_next_contact">Next Contact</string>
    <string name="btn_continue">Continue</string>
    <string name="contact_insert_ok">Contact logged successfully!</string>
    <string name="contact_insert_failed">Contact could not be saved. Please contact the researcher!</string>
    <string name="log_insert_ok">Contact and location\nlogged successfully!</string>
    <string name="log_insert_failed">Location could not be saved. Please contact the researcher!</string>
    <string name="item_insert_ok">Daily activity logged\nsuccessfully!</string>
    <string name="item_insert_failed">Daily activity could not\nbe saved. Please contact\nthe researcher!</string>
    <string name="thanks">Thank you!</string>
    <string name="sorry">Ups, something went wrong!</string>
    <string name="hurray">Hurray!</string>
    <string name="ohoh">Oh, Oh!</string>
    <string name="action_admin">Administration</string>
    <string name="action_alarm">Alarm / Reminder</string>
    <string name="action_daily">Daily Activity</string>
    <string name="action_loc_settings">Location services</string>
    <string name="action_about">About / FAQ</string>
    <string name="action_close">Close</string>
    <string name="action_exit_app">Exit App</string>
    <string name="title_admin">Administration</string>
    <string name="admin_hl">Database</string>
    <string name="prefs_hl">Shared prefs</string>
    <string name="photos_hl">Contact Photos</string>
    <string name="phoneid_hl">Phone / Participant ID</string>
    <string name="photos_dirsize">Photos / directory size:</string>
    <string name="no_photos_backup">No photos to backup!</string>
    <string name="num_entries">Entries:</string>
    <string name="btn_export">Export</string>
    <string name="btn_show">Show</string>
    <string name="btn_download">Get Map</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_import">Import</string>
    <string name="delete_ok">Deletion successful</string>
    <string name="delete_fail">Deletion FAILED!</string>
    <string name="default_mapurl">REPLACE WITH URL OF MBTILES FILE</string>
    <string name="logout">Logout</string>
    <string name="dwl_title">Offline map download</string>
    <string name="dwl_desc">Map is being downloaded …</string>
    <string name="dwl_url">Download URL</string>
    <string name="map_importing">Importing map …</string>
    <string name="map_found">found&#160;</string>
    <string name="end_import">Finished import!</string>
    <string name="end_export">Finished export!</string>
    <string name="downloading_map">Downloading map …</string>
    <string name="task_hl">Task Progress</string>
    <string name="task_msg">Task message:</string>
    <string name="offline_map">Offline map</string>
    <string name="map_hl">Import remote offline map</string>
    <string name="map_local_hl">Import local offline map</string>
    <string name="map_status_hl">Map status:</string>
    <string name="map_exists">Map already exist!</string>
    <string name="map_url_error">Error, enter a Map URL!</string>
    <string name="map_import_ready">Map ready to import!</string>
    <string name="del_map_error">Could not delete offline map!</string>
    <string name="no_off_map">No offline map on device!</string>
    <string name="off_map_deleted">Offline map deleted!</string>
    <string name="map_nodwl_yet">Map not downloaded yet!</string>
    <string name="map_not_found">No mbtiles file found!</string>
    <string name="zip_backup">Zip/Backup</string>
    <string name="zipped_ok">Photo backup successful</string>
    <string name="zipped_failed">Photo backup failed!</string>
    <string name="saved_userid">User ID saved successfully</string>
    <string name="userid">User or Phone ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_login">Administration Login</string>
    <string name="login_message">This area is only for administration purposes. You do not require access to this area to use this App.</string>
    <string name="login_failed">Wrong Password, please try again.</string>
    <string name="title_log">Check Location?</string>
    <string name="your_loc">Your Location</string>
    <string name="corr_loc">Corrected Location</string>
    <string name="loc_lat">Latitude:&#160;</string>
    <string name="loc_long">Longitude:&#160;</string>
    <string name="loc_accuracy">Accuracy:&#160;</string>
    <string name="loc_infotext">Please confirm or correct your location. Hold and drag the red pin to your current location to correct it.</string>
    <string name="map_normal">Google Normal</string>
    <string name="map_hybrid">Google Hybrid</string>
    <string name="map_mapbox">Mapbox Outdoors</string>
    <string name="map_osm">OpenStreet map</string>
    <string name="btn_update_contact">Confirm / Update Location</string>
    <string name="loc_update_ok">Location updated successfully</string>
    <string name="loc_update_fail">Location update FAILED!</string>
    <string name="dialog_location_off_title">Location services disabled</string>
    <string name="dialog_location_dialog_text">Please make sure the location services are activated and that the mode is set to high accuracy.</string>
    <string name="location_services">Location services</string>
    <string name="please_wait">Please wait…</string>
    <string name="getting_location">Getting best location.</string>
    <string name="dialog_novalue_title">Missing Response…</string>
    <string name="dialog_novalues_title">Missing Responses…</string>
    <string name="dialog_missing_plu">Responses to the following items are missing.\n\n</string>
    <string name="dialog_missing_sin">A response to the following item is missing.\n\n</string>
    <string name="album_name">ContactLogger</string>
    <string name="title_photolist">Contact Photos</string>
    <string name="action_camera">Take a new photo</string>
    <string name="photo_deleted">Photo successfully deleted</string>
    <string name="really_delete_msg">Do you really want to delete this photo permanently?</string>
    <string name="title_other_type">Other Setting / Type</string>
    <string name="title_other_rel">Other Relationship</string>
    <string name="other_message">Please specify, if none of the pre-defined categories seem fitting.</string>
    <string name="title_alarm">Daily Alarm / Reminder</string>
    <string name="alarm_message">Set a time and/or interval when you would like to be reminded.</string>
    <string name="admin_photos_deleted">&#160;photo(s) deleted</string>
    <string name="admin_nothing_deleted">&#160;No photos to delete!</string>
    <string name="remote_status">Service status</string>
    <string name="remote_start_hour">9</string>
    <string name="attention">Attention!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="decline_all">Decline all</string>
    <string name="delete_all">Delete all</string>
    <string name="decline_one">Decline</string>
    <string name="no_selection">No selection</string>
    <string name="save">Save</string>
    <string name="slash">&#160;/&#160;</string>
    <string name="percent">%</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hour_hint"><![CDATA[<small>hour</small>]]></string>
    <string name="min_hint"><![CDATA[<small>min.</small>]]></string>
    <string name="alarm_start">Daily alarm\nstart time</string>
    <string name="alarm_stop">Daily alarm\nstop time</string>
    <string name="alarm_int">Repeat\ninterval</string>
    <string name="alarm_int_hours">Repeat interval hours</string>
    <string name="alarm_int_mins">Repeat interval minutes</string>
    <string name="alarm_active">Activate alarm?</string>
    <string name="alarm_ticker">Remember to log your contacts!</string>
    <string name="alarm_title">Contact Reminder</string>
    <string name="alarm_reminder">Don\'t forget to log your contacts!</string>
    <string name="mapbox_url1">http://api.tiles.mapbox.com/v4/</string>
    <string name="mapbox_url2">/{z}/{x}/{y}@2x.png256?access_token=</string>
    <string name="osm_url">http://a.tile.openstreetmap.org/{z}/{x}/{y}.png</string>
    <string name="dailyInfoText">To what extent do you feel that <b>older</b> people are …</string>
    <string name="dailyInfoHeading">Question</string>
    <string name="PREFS_NAME">contact_logger_prefs</string>
    <string name="title_sharedprefs">Shared Preferences</string>
    <string name="about_project_hl">1. Project Information</string>
    <string name="about_faq_hl">2. FAQ</string>
</resources>