<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dailyInfoHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginStart="15dip"
        android:layout_marginEnd="15dip"
        android:text="@string/dailyInfoHeading"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dailyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_top_margin"
        android:layout_marginStart="15dip"
        android:layout_marginEnd="15dip"
        android:paddingBottom="5dip"
        android:layout_below="@id/dailyInfoHeading"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!-- Attitude 1 - Reliable -->
    <RelativeLayout
        android:id="@+id/FrameItem1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:layout_below="@id/dailyInfo"
        android:layout_marginBottom="@dimen/frame_bottom_margin"
        android:layout_marginEnd="@dimen/frame_right_margin"
        android:layout_marginStart="@dimen/frame_left_margin"
        android:layout_marginTop="@dimen/frame_top_margin"
        android:background="@drawable/bg_areas"
        android:paddingBottom="@dimen/frame_bottom_padding"
        android:paddingEnd="@dimen/frame_right_padding"
        android:paddingStart="@dimen/frame_left_padding"
        android:paddingTop="@dimen/frame_top_padding">

        <TextView
            android:id="@+id/info_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_selection"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/hl_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_item1"
            android:layout_alignParentEnd="true"
            android:textAllCaps="true"
            android:textSize="13sp" />

        <ToggleButton
            android:id="@+id/btn_item1_1"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:background="@drawable/btn_item1_num1"
            android:contentDescription="@string/btn_likert_1"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item1_2"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item1_1"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item1_1"
            android:background="@drawable/btn_item1_num2"
            android:contentDescription="@string/btn_likert_2"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item1_3"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item1_2"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item1_2"
            android:background="@drawable/btn_item1_num3"
            android:contentDescription="@string/btn_likert_3"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item1_4"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item1_3"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item1_3"
            android:background="@drawable/btn_item1_num4"
            android:contentDescription="@string/btn_likert_4"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item1_5"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item1_4"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item1_4"
            android:background="@drawable/btn_item1_num5"
            android:contentDescription="@string/btn_likert_5"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

    </RelativeLayout>

    <!-- Attitude 2 - Skilled -->
    <RelativeLayout
        android:id="@+id/FrameItem2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:layout_below="@id/FrameItem1"
        android:layout_marginBottom="@dimen/frame_bottom_margin"
        android:layout_marginEnd="@dimen/frame_right_margin"
        android:layout_marginStart="@dimen/frame_left_margin"
        android:layout_marginTop="@dimen/frame_top_margin"
        android:background="@drawable/bg_areas"
        android:paddingBottom="@dimen/frame_bottom_padding"
        android:paddingEnd="@dimen/frame_right_padding"
        android:paddingStart="@dimen/frame_left_padding"
        android:paddingTop="@dimen/frame_top_padding">

        <TextView
            android:id="@+id/info_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_selection"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/hl_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_item2"
            android:layout_alignParentEnd="true"
            android:textAllCaps="true"
            android:textSize="13sp" />

        <ToggleButton
            android:id="@+id/btn_item2_1"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:background="@drawable/btn_item2_num1"
            android:contentDescription="@string/btn_likert_1"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item2_2"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item2_1"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item2_1"
            android:background="@drawable/btn_item2_num2"
            android:contentDescription="@string/btn_likert_2"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item2_3"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item2_2"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item2_2"
            android:background="@drawable/btn_item2_num3"
            android:contentDescription="@string/btn_likert_3"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item2_4"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item2_3"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item2_3"
            android:background="@drawable/btn_item2_num4"
            android:contentDescription="@string/btn_likert_4"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item2_5"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item2_4"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item2_4"
            android:background="@drawable/btn_item2_num5"
            android:contentDescription="@string/btn_likert_5"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

    </RelativeLayout>

    <!-- Attitude 3 - Friendly -->
    <RelativeLayout
        android:id="@+id/FrameItem3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:layout_below="@id/FrameItem2"
        android:layout_marginBottom="@dimen/frame_bottom_margin"
        android:layout_marginEnd="@dimen/frame_right_margin"
        android:layout_marginStart="@dimen/frame_left_margin"
        android:layout_marginTop="@dimen/frame_top_margin"
        android:background="@drawable/bg_areas"
        android:paddingBottom="@dimen/frame_bottom_padding"
        android:paddingEnd="@dimen/frame_right_padding"
        android:paddingStart="@dimen/frame_left_padding"
        android:paddingTop="@dimen/frame_top_padding">

        <TextView
            android:id="@+id/info_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_selection"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/hl_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_item3"
            android:layout_alignParentEnd="true"
            android:textAllCaps="true"
            android:textSize="13sp" />

        <ToggleButton
            android:id="@+id/btn_item3_1"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:background="@drawable/btn_item3_num1"
            android:contentDescription="@string/btn_likert_1"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item3_2"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item3_1"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item3_1"
            android:background="@drawable/btn_item3_num2"
            android:contentDescription="@string/btn_likert_2"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item3_3"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item3_2"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item3_2"
            android:background="@drawable/btn_item3_num3"
            android:contentDescription="@string/btn_likert_3"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item3_4"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item3_3"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item3_3"
            android:background="@drawable/btn_item3_num4"
            android:contentDescription="@string/btn_likert_4"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

        <ToggleButton
            android:id="@+id/btn_item3_5"
            style="@style/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_item3_4"
            android:layout_marginLeft="7dip"
            android:layout_toRightOf="@+id/btn_item3_4"
            android:background="@drawable/btn_item3_num5"
            android:contentDescription="@string/btn_likert_5"
            android:minHeight="@dimen/btn_height"
            android:minWidth="@dimen/btn_width" />

    </RelativeLayout>

    <!-- Continue button -->
    <Button
        android:id="@+id/btn_continue"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dip"
        android:minHeight="@dimen/btn_generic_height"
        android:layout_marginEnd="@dimen/frame_right_margin"
        android:layout_marginStart="@dimen/frame_left_margin"
        android:background="@drawable/btn_log_contact"
        android:onClick="logDailyActivity"
        android:text="@string/btn_continue" />

</RelativeLayout>